# NeuPAN

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_GUIDE.md  Dockerfile  README.md  phase1_docker_prompt.md  pyproject.toml  requirements.txt  run.sh
sgcf_nrmp_project/core/: README.md  pyproject.toml
sgcf_nrmp_project/core/configs/data/: geometry_dataset.yaml  procedural.yaml  semantic_scene.yaml  stage_10_rgb_semantic.yaml
sgcf_nrmp_project/core/configs/eval/: lidar_clearance.yaml  stage_07_projection.yaml  stage_09_semantic_closed_loop.yaml  stage_09b_planner_hardening.yaml  stage_10_semantic_eval.yaml
sgcf_nrmp_project/core/configs/model/: lidar_clearance_field.yaml  pointpainting_baseline.yaml  tiny_semantic_segmentation.yaml
sgcf_nrmp_project/core/configs/planner/: semantic_nrmp.yaml
sgcf_nrmp_project/core/configs/train/: lidar_clearance_smoke.yaml  stage_10_semantic_training.yaml  stage_10a_pipeline_diagnosis.yaml  stage_10c_single_image_recheck.yaml  stage_10d_four_image_diagnosis.yaml  stage_10e_48_image_overfit.yaml  stage_10h_formal_retry.yaml
sgcf_nrmp_project/core/envs/: torch_cp310_cu128.yaml
sgcf_nrmp_project/core/scripts/: audit_stage09a_lifecycle.py  audit_stage10a_alignment.py  benchmark_clearance_query.py  benchmark_exact_oracle_optimization.py  benchmark_gt_nrmp_gates.py  compare_stage10d_four_image_losses.py  diagnose_stage10b_collapse_single.py  diagnose_stage10b_distribution.py  diagnose_stage10c_convergence.py  diagnose_stage10c_single_residual.py  diagnose_stage10g_training_lifecycle.py  diagnose_stage10i_human_recall.py  evaluate_lidar_clearance.py  evaluate_stage07_projection_pointpainting.py  evaluate_stage08a_candidate_search.py  evaluate_stage09_semantic_nrmp.py  evaluate_stage10h_perception.py  generate_geometry_dataset.py  generate_stage10_rgb_dataset.py  inspect_geometry_dataset.py  prepare_stage10d_four_images.py  recheck_stage10a_overfit_gate.py  recheck_stage10c_single_image.py  run_gt_nrmp_scenarios.py  run_stage09b_planner_hardening.py  run_stage10e_48_image_overfit.py  run_stage10j_low_lr_stabilization.py  train_lidar_clearance_smoke.py  train_rgb_semantic_model.py  train_stage10f_semantic_model.py  train_stage10h_formal_retry.py  validate_clearance_labels.py  validate_geometry_dataset.py  visualize_lidar_clearance_field.py  visualize_procedural_scene.py
sgcf_nrmp_project/core/src/sgcf_nrmp/: __init__.py
sgcf_nrmp_project/core/src/sgcf_nrmp/data/: rgb_semantic_dataset.py
sgcf_nrmp_project/core/src/sgcf_nrmp/evaluation/: __init__.py  (+6 more)
sgcf_nrmp_project/core/tests/: test_import.py
sgcf_nrmp_project/core/tests/data/: __init__.py  dataset_test_utils.py  test_dataset_corruption.py  test_dataset_generation.py  test_dataset_loading.py  test_dataset_reproducibility.py  test_dataset_split.py  test_reproducibility.py  test_semantic_scene.py
sgcf_nrmp_project/core/tests/evaluation/: test_clearance_metrics.py
sgcf_nrmp_project/core/tests/fusion/: test_pointpainting.py  test_sparse_candidate_search.py
sgcf_nrmp_project/core/tests/geometry/: test_camera_projection.py  test_geometry.py
sgcf_nrmp_project/core/tests/models/: test_lidar_clearance_field.py
sgcf_nrmp_project/core/tests/perception/: test_stage10d_diagnostics.py  test_stage10e_overfit_setup.py
sgcf_nrmp_project/core/tests/planner/: test_batched_observable_oracle.py  test_dynamics_and_qp.py  test_online_offline_boundary.py  test_planner_behavior.py  test_semantic_nrmp_planner.py  test_stage09a_lifecycle.py  test_stage09b_status_machine.py  test_stage09c_collision_recovery.py
sgcf_nrmp_project/core/tests/semantic/: test_explicit_failure_gate.py  test_margin_labeler.py  test_reliability_labeler.py  test_semantic_margin_provider.py
sgcf_nrmp_project/core/tests/training/: test_class_weight_audit.py  test_clearance_training.py  test_stage10g_lifecycle.py  test_stage10h_policy.py  test_stage10i_validation_only.py  test_stage10j_feasibility.py
sgcf_nrmp_project/ros2_ws/src/sgcf_nrmp_bridge/: package.xml  setup.cfg  setup.py
sgcf_nrmp_project/ros2_ws/src/sgcf_nrmp_bringup/: package.xml  setup.cfg  setup.py
sgcf_nrmp_project/ros2_ws/src/sgcf_nrmp_evaluation/: package.xml  setup.cfg  setup.py
sgcf_nrmp_project/ros2_ws/src/sgcf_nrmp_fusion/: package.xml  setup.cfg  setup.py
sgcf_nrmp_project/ros2_ws/src/sgcf_nrmp_msgs/: package.xml  setup.cfg  setup.py
(+5390 files in other folders)
