[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'neupan'
version = "1.3"
requires-python = ">= 3.9"
authors = [{name = "Han Ruihua", email = "hanrh@connect.hku.hk"}]
description = "NeuPAN"
readme = "README.md"
dependencies = [
    'numpy==1.26.4',
    'scipy==1.13.0',
    'cvxpy==1.7.5',
    'cvxpylayers==0.1.6',
    'diffcp==1.0.23',
    'ecos==2.0.14',
    'osqp==1.1.1',
    'scs==3.2.11',
    'matplotlib==3.9.4',
    'shapely==2.0.7',
    'rich',
    'pyyaml',
    'scikit-learn',
    'loguru==0.7.3',
    'gctl==1.2',
    'dill',
    'colorama',
]

[project.optional-dependencies]
irsim = ['ir-sim>=2.4.0']
all = ['ir-sim>=2.4.0']

[tool.setuptools]
packages = ["neupan"]

[dependency-groups]
dev = [
    "torch>=2.8.0",
]



