<?xml version="1.0"?><package format="3"><name>sgcf_nrmp_bringup</name><version>0.1.0</version><description>Stage 12 synthetic publisher and self-contained bag tools.</description><maintainer email="local@example.com">SGCF</maintainer><license>GPL-3.0-or-later</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>rclpy</exec_depend><exec_depend>sensor_msgs</exec_depend><exec_depend>nav_msgs</exec_depend><exec_depend>tf2_msgs</exec_depend><exec_depend>rosgraph_msgs</exec_depend><export><build_type>ament_python</build_type></export></package>
