<?xml version="1.0"?><package format="3"><name>sgcf_nrmp_fusion</name><version>0.1.0</version><description>Offline fusion contract node.</description><maintainer email="local@example.com">SGCF</maintainer><license>GPL-3.0-or-later</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>rclpy</exec_depend><exec_depend>sensor_msgs</exec_depend><exec_depend>std_msgs</exec_depend><exec_depend>rosgraph_msgs</exec_depend><export><build_type>ament_python</build_type></export></package>
