<?xml version="1.0"?>
<package format="3"><name>sgcf_nrmp_msgs</name><version>0.1.0</version><description>Stage 12 offline contracts.</description><maintainer email="local@example.com">SGCF</maintainer><license>GPL-3.0-or-later</license><buildtool_depend>ament_python</buildtool_depend><exec_depend>python3</exec_depend><export><build_type>ament_python</build_type></export></package>
